force-app/main/default/objects/hed__Hierarchy_Settings__c/hed__Hierarchy_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>All hierarchy settings.</description>
    <label>Paramètre de la hiérarchie</label>
</CustomObject>