force-app/main/default/objects/hed__Hierarchy_Settings__c/fields/hed__Account_Processor__c.field-meta.xml
<CustomField>
    <fullName>hed__Account_Processor__c</fullName>
    <description>ID of the default record type for Account. For example, if specifying Administrative (the recommended Account model), enter the ID of the Administrative record type for the Account object.</description>
    <inlineHelpText>ID du type d&apos;enregistrement par défaut du compte. Par exemple, si vous spécifiez Administratif (le modèle Compte recommandé), saisissez l&apos;ID du type d&apos;enregistrement Administratif pour l&apos;objet Compte.</inlineHelpText>
    <label>Account Processor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>