force-app/main/default/objects/hed__Hierarchy_Settings__c/fields/hed__Accounts_Addresses_Enabled__c.field-meta.xml
<CustomField>
    <fullName>hed__Accounts_Addresses_Enabled__c</fullName>
    <description>The record types of Accounts that should have multi-addresses enabled.</description>
    <inlineHelpText>Les types d&apos;enregistrement de Comptes dans lesquels plusieurs adresses doivent être activées.</inlineHelpText>
    <label>Multi-Address Accounts</label>
    <type>TextArea</type>
</CustomField>