force-app/main/default/objects/hed__Hierarchy_Settings__c/fields/hed__Accounts_to_Delete__c.field-meta.xml
<CustomField>
    <fullName>hed__Accounts_to_Delete__c</fullName>
    <description>The record types of Accounts to be automatically deleted if all their associated Contacts have been deleted.</description>
    <inlineHelpText>Les types d&apos;enregistrement de Comptes qui sont automatiquement supprimés si tous leurs Contacts associés ont été supprimés.</inlineHelpText>
    <label>Accounts to Delete</label>
    <type>TextArea</type>
</CustomField>