force-app/main/default/objects/hed__Hierarchy_Settings__c/fields/hed__Admin_Account_Naming_Format__c.field-meta.xml
<CustomField>
    <fullName>hed__Admin_Account_Naming_Format__c</fullName>
    <description>Stores the default format for Admin Account names.</description>
    <inlineHelpText>Stocke le format par défaut des noms de Compte administratif.</inlineHelpText>
    <label>Admin Account Naming Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>