force-app/main/default/objects/hed__Hierarchy_Settings__c/fields/hed__Admin_Other_Name_Setting__c.field-meta.xml
<CustomField>
    <fullName>hed__Admin_Other_Name_Setting__c</fullName>
    <description>Stores other info about Admin Account naming format.</description>
    <inlineHelpText>Stocke d&apos;autres informations sur le format de nom du Compte administratif.</inlineHelpText>
    <label>Admin Other Name Setting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>