force-app/main/default/objects/hed__Hierarchy_Settings__c/fields/hed__Administrative_Account_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>hed__Administrative_Account_Record_Type__c</fullName>
    <description>The Account record type used for Administrative Accounts. This setting affects management of Address records and the naming format of Administrative Accounts.</description>
    <inlineHelpText>Le type d&apos;enregistrement Compte utilisé pour des Comptes administratifs. Ce paramètre affecte la gestion des enregistrements Adresse et le format de nommage des comptes administratifs.</inlineHelpText>
    <label>Administrative Account Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>