force-app/main/default/objects/hed__Hierarchy_Settings__c/fields/hed__Affiliation_Record_Type_Enforced__c.field-meta.xml
<CustomField>
    <fullName>hed__Affiliation_Record_Type_Enforced__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If enabled, an error results when users populate a primary field on Contact with an Account that has a record type mismatch to the record type defined in EDA Settings. The Affiliation record is not created and primary fields on Contact are not corrected</description>
    <inlineHelpText>Si activée, une erreur est renvoyée lorsque les utilisateurs remplissent un champ dans Contact avec un Compte dont le type n&apos;est pas défini dans les paramètres EDA. L&apos;enregistrement Affiliation n&apos;est pas créé et les champs du contact sont incorrects.</inlineHelpText>
    <label>Affiliation Record Type Enforced</label>
    <type>Checkbox</type>
</CustomField>