force-app/main/default/objects/hed__Hierarchy_Settings__c/fields/hed__Affl_ProgEnroll_Copy_End_Date__c.field-meta.xml
<CustomField>
    <fullName>hed__Affl_ProgEnroll_Copy_End_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether to set the End Date of the Affiliation created with a Program Enrollment. If enabled, set the End Date to the Program Enrollment&apos;s End Date. If disabled, don&apos;t specify the Affiliation&apos;s End Date.</description>
    <inlineHelpText>Indique si la Date de fin de l&apos;Affiliation créée lors de l&apos;inscription au programme doit être définie. Si cette case est activée, définissez la date de fin sur celle de l&apos;inscription au programme, sinon, ne spécifiez pas la date de fin de l&apos;affiliation.</inlineHelpText>
    <label>Affil End Date Copy from Prog Enroll</label>
    <type>Checkbox</type>
</CustomField>