force-app/main/default/objects/hed__Hierarchy_Settings__c/fields/hed__Affl_ProgEnroll_Del__c.field-meta.xml
<CustomField>
    <fullName>hed__Affl_ProgEnroll_Del__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether to delete an Affiliation when its related Program Enrollment is deleted. If enabled, delete the Affiliation. If disabled, set the Affiliation&apos;s Status to the value specified in the related setting, Affil Status When Delete Prog Enroll.</description>
    <inlineHelpText>Indique si une affil. doit être supprimée lors de la suppr. de son inscr. au progr. assoc. Si activé, supprimez l&apos;affil. Si désactivé, définissez le stat. de l&apos;affil. sur la valeur spécifiée dans le par. assoc. (Stat. affil. qd inscr. prog. suppr).</inlineHelpText>
    <label>Affil Delete When Delete Prog Enroll</label>
    <type>Checkbox</type>
</CustomField>