force-app/main/default/objects/hed__Hierarchy_Settings__c/fields/hed__Affl_ProgEnroll_Del_Status__c.field-meta.xml
<CustomField>
    <fullName>hed__Affl_ProgEnroll_Del_Status__c</fullName>
    <description>If the related setting, Affil Delete When Delete Prog Enroll, is disabled, this setting specifies the value to set for the Affiliation&apos;s Status, when its related Program Enrollment is deleted.</description>
    <inlineHelpText>Si le paramètre associé (Suppr. affiliation qd inscr. prog. suppr) est désactivé, ce paramètre spécifie la valeur à définir pour le statut de l&apos;affiliation lors de la suppression de son inscription au programme associée.</inlineHelpText>
    <label>Affil Status When Delete Prog Enroll</label>
    <length>255</length>
    <type>Text</type>
</CustomField>