force-app/main/default/objects/hed__Hierarchy_Settings__c/fields/hed__Affl_ProgEnroll_Role_Map__c.field-meta.xml
<CustomField>
    <fullName>hed__Affl_ProgEnroll_Role_Map__c</fullName>
    <description>If the related setting, Affil Set Role When Create Prog Enroll, is enabled, this setting specifies the value to set for the Role on the Affiliation created with a Program Enrollment.</description>
    <inlineHelpText>Si le paramètre associé (Rôle affiliation défini qd inscr. prog.) est désactivé, ce paramètre spécifie la valeur à définir pour le statut de l&apos;affiliation lors de la suppression de son inscription au programme associée.</inlineHelpText>
    <label>Affil Role When Create Prog Enroll</label>
    <length>255</length>
    <type>Text</type>
</CustomField>