force-app/main/default/objects/hed__Hierarchy_Settings__c/fields/hed__Affl_ProgEnroll_Status_Map__c.field-meta.xml
<CustomField>
    <fullName>hed__Affl_ProgEnroll_Status_Map__c</fullName>
    <description>The value set for the Status of an Affiliation record automatically created with a Program Enrollment.</description>
    <inlineHelpText>La valeur définie pour le Statut d&apos;un enregistrement Affiliation automatiquement créé avec une Inscription au programme.</inlineHelpText>
    <label>Affil Status When Create Prog Enroll</label>
    <length>255</length>
    <type>Text</type>
</CustomField>