force-app/main/default/objects/hed__Hierarchy_Settings__c/fields/hed__Allow_AutoCreated_Duplicates__c.field-meta.xml
<CustomField>
    <fullName>hed__Allow_AutoCreated_Duplicates__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Auto-created Relationships are deduplicated to prevent duplication of Relationship records between Contacts. Select Allow Auto-Created Duplicate Relations to disable this behavior and allow multiple Relationships of the same type between two Contacts.</description>
    <inlineHelpText>Les Relations automatiquement créées sont dédupliquées pour empêcher les doublons. Sélectionnez Autoriser les relations dupliquées automatiquement créées pour désactiver ce comportement et autoriser plusieurs Relations de même type entre deux contacts.</inlineHelpText>
    <label>Allow Auto-Created Duplicate Relations</label>
    <type>Checkbox</type>
</CustomField>