force-app/main/default/objects/hed__Hierarchy_Settings__c/fields/hed__Application_Window_Validation__c.field-meta.xml
<CustomField>
    <fullName>hed__Application_Window_Validation__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Verify that the Due Date is after the Open Date</description>
    <inlineHelpText>Verify that the Due Date is after the Open Date</inlineHelpText>
    <label>Application Window Validation</label>
    <type>Checkbox</type>
</CustomField>