force-app/main/default/objects/hed__Hierarchy_Settings__c/fields/hed__Automatic_Household_Naming__c.field-meta.xml
<CustomField>
    <fullName>hed__Automatic_Household_Naming__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If enabled, the Household Name is automatically set based on the Household Name Format settings.</description>
    <inlineHelpText>Si cette option est activée, le Nom du foyer est automatiquement défini sur la base des paramètres Format de nom du foyer.</inlineHelpText>
    <label>Automatic Household Naming</label>
    <type>Checkbox</type>
</CustomField>