force-app/main/default/objects/hed__Hierarchy_Settings__c/fields/hed__Default_Contact_Language_Fluency__c.field-meta.xml
<CustomField>
    <fullName>hed__Default_Contact_Language_Fluency__c</fullName>
    <description>The Fluency value automatically set on newly created Contact Language records when users set the Primary Language lookup field on a Contact.</description>
    <inlineHelpText>La valeur Maîtrise linguistique automatiquement définie dans les enregistrements de langue du contact créés lorsque les utilisateurs définissent le champ Langue principale dans un contact.</inlineHelpText>
    <label>Default Contact Language Fluency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>