force-app/main/default/objects/hed__Hierarchy_Settings__c/fields/hed__Disable_Preferred_Phone_Enforcement__c.field-meta.xml
<CustomField>
    <fullName>hed__Disable_Preferred_Phone_Enforcement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable the enforcement of the Preferred Phone field for Contact.</description>
    <inlineHelpText>Sélectionnez cette option pour désactiver l&apos;application du champ Téléphone préféré des contacts.</inlineHelpText>
    <label>Disable Preferred Phone Enforcement</label>
    <type>Checkbox</type>
</CustomField>