force-app/main/default/objects/hed__Hierarchy_Settings__c/fields/hed__Enable_Course_Connections__c.field-meta.xml
<CustomField>
    <fullName>hed__Enable_Course_Connections__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When enabled, allows users to choose the Contact type (Faculty or Student) when creating a Course Connection record. This feature requires default Contact record types to be set for active students and faculty.</description>
    <inlineHelpText>Si activée, les utilisateurs peuvent choisir le type de Contact (Professeur ou Étudiant) en créant un enregistrement Connexion au cours. Des types d&apos;enregistrement Contact par défaut doivent être définis pour les étudiants et les professeurs actifs.</inlineHelpText>
    <label>Enable Course Connections</label>
    <type>Checkbox</type>
</CustomField>