force-app/main/default/objects/hed__Hierarchy_Settings__c/fields/hed__Enable_Debug__c.field-meta.xml
<CustomField>
    <fullName>hed__Enable_Debug__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select to enable debug statements in managed package code.</description>
    <inlineHelpText>Sélectionnez pour activer les déclarations de débogage dans le code de package géré.</inlineHelpText>
    <label>Enable Debug</label>
    <type>Checkbox</type>
</CustomField>