force-app/main/default/objects/hed__Hierarchy_Settings__c/fields/hed__Faculty_RecType__c.field-meta.xml
<CustomField>
    <fullName>hed__Faculty_RecType__c</fullName>
    <description>The default Contact record type for Faculty when creating a Course Connection record.</description>
    <inlineHelpText>Le type d&apos;enregistrement Contact par défaut pour Professeur lors de la création d&apos;un enregistrement Connexion au cours.</inlineHelpText>
    <label>Faculty Record Type</label>
    <length>18</length>
    <type>Text</type>
</CustomField>