force-app/main/default/objects/hed__Hierarchy_Settings__c/fields/hed__Household_Account_Naming_Format__c.field-meta.xml
<CustomField>
    <fullName>hed__Household_Account_Naming_Format__c</fullName>
    <description>Stores the Household Account Naming Format.</description>
    <inlineHelpText>Stocke le Format de nommage du compte du foyer.</inlineHelpText>
    <label>Household Account Naming Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>