force-app/main/default/objects/hed__Hierarchy_Settings__c/fields/hed__Household_Addresses_RecType__c.field-meta.xml
<CustomField>
    <fullName>hed__Household_Addresses_RecType__c</fullName>
    <description>The Account record type used for Household Accounts. This setting affects management of Address records and the naming format of Household Accounts.</description>
    <inlineHelpText>Le type d&apos;enregistrement Compte utilisé pour des Comptes de foyer. Ce paramètre affecte la gestion des enregistrements Adresse et le format de nommage des comptes de foyer.</inlineHelpText>
    <label>Household Addresses Acc Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>