force-app/main/default/objects/hed__Hierarchy_Settings__c/fields/hed__Lead_Converted_Account_RTypes__c.field-meta.xml
<CustomField>
    <fullName>hed__Lead_Converted_Account_RTypes__c</fullName>
    <description>The Account record types to use EDA&apos;s account naming format when converting Leads.</description>
    <inlineHelpText>Les types d’enregistrements de compte pour utiliser le format de nom de compte d’EDA lors de la conversion de pistes.</inlineHelpText>
    <label>Lead-Converted Account Record Types</label>
    <type>TextArea</type>
</CustomField>