force-app/main/default/objects/hed__Hierarchy_Settings__c/fields/hed__Preferred_Phone_Selection__c.field-meta.xml
<CustomField>
    <fullName>hed__Preferred_Phone_Selection__c</fullName>
    <description>Select a desired Preferred Phone when the Data Cleanup batch job runs.</description>
    <inlineHelpText>Sélectionnez un Téléphone préféré lors de l’exécution de la tâche par lot Nettoyage des données.</inlineHelpText>
    <label>Preferred Phone Selection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>