force-app/main/default/objects/hed__Hierarchy_Settings__c/fields/hed__Reciprocal_Method__c.field-meta.xml
<CustomField>
    <fullName>hed__Reciprocal_Method__c</fullName>
    <description>Determines the method used to generate the reciprocal relationship. Use List Setting to use custom settings by gender. Use Value Inversion to invert the type if appropriate (&quot;Parent-Child&quot; to &quot;Child-Parent&quot;)</description>
    <inlineHelpText>Détermine la méthode de génération de la relation réciproque. Sélectionnez Paramètre de liste afin d&apos;utiliser des paramètres personnalisés par sexe. Sélectionnez Inversion de valeur afin d&apos;invertir le type si approprié (de Parent-Enfant à Enfant-Parent)</inlineHelpText>
    <label>Reciprocal Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>