force-app/main/default/objects/hed__Hierarchy_Settings__c/fields/hed__Relationship_Name_Field_Id__c.field-meta.xml
<CustomField>
    <fullName>hed__Relationship_Name_Field_Id__c</fullName>
    <description>This field is currently not used.</description>
    <inlineHelpText>Ce champ n&apos;est pas utilisé actuellement.</inlineHelpText>
    <label>Relationship Name Field Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>