force-app/main/default/objects/hed__Hierarchy_Settings__c/fields/hed__Simple_Address_Change_Treated_as_Update__c.field-meta.xml
<CustomField>
    <fullName>hed__Simple_Address_Change_Treated_as_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When enabled, changes to single address fields on Contact or Account are treated as updates to the existing address (for example, no new Address object is created). White space and case changes are treated as updates.</description>
    <inlineHelpText>Si activée, les modifications des champs d&apos;adresse uniques dans Contact ou Compte sont traitées en tant que mises à jour de l&apos;adresse existante (sans créer un objet Adresse). Les modifications des espaces vides et des requêtes sont traitées à l&apos;identique.</inlineHelpText>
    <label>Simple Address Change Treated as Update</label>
    <type>Checkbox</type>
</CustomField>