force-app/main/default/objects/hed__Hierarchy_Settings__c/fields/hed__Store_Errors_On__c.field-meta.xml
<CustomField>
    <fullName>hed__Store_Errors_On__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable this feature to store errors.</description>
    <inlineHelpText>Activez cette fonctionnalité pour stocker les erreurs.</inlineHelpText>
    <label>Store Errors</label>
    <type>Checkbox</type>
</CustomField>