force-app/main/default/objects/hed__Hierarchy_Settings__c/fields/hed__Validate_Program_Plan_for_Nested_PR__c.field-meta.xml
<CustomField>
    <fullName>hed__Validate_Program_Plan_for_Nested_PR__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When selected, Plan Requirements can specify either a Program Plan or a parent Plan Requirement, but not both. For example, a Plan Requirement that has a parent Plan Requirement can’t also specify a Program Plan, or vice versa. If you specify both a Program Plan and a parent Plan Requirement, an error message prevents saving until only one is selected.</description>
    <inlineHelpText>Si cette option est activée, les exigences du plan peuvent spécifier un plan de programme ou une exigence de plan parent, mais pas les deux. Si vous spécifiez les deux, un message d’erreur empêche l&apos;enregistrement jusqu&apos;à ce qu&apos;un seul soit sélectionné.</inlineHelpText>
    <label>Validate Program Plan for Nested PR</label>
    <type>Checkbox</type>
</CustomField>